# osdev

./: .ackrc  .bazelignore  .bazelrc  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  defs.bzl
drv/: BUILD  uart.cc  uart.hh
hello/: BUILD  empty.cc  hello-run.sh  main.cc  test.cc
lib/: BUILD  IO.cc  IO.hh  System.hh  debug.hh  math.hh  types.hh
nova/: BUILD
nova/x86_64/: BUILD  nova.BUILD
sys/: BUILD  syscalls.hh
sys/nova/: BUILD  Hypercalls.cc  Hypercalls.hh  ObjectSpace.hh  hip.hh
sys/x86_64/: BUILD  boot.cc  dietlibc.BUILD  entry.S  geniso.sh  grub.cfg.in  ovmf.BUILD  rootpd.in.ld  run.sh  syscalls.cc  syscalls.hh
toolchain/: BUILD  cc_toolchain_config.bzl
toolchains/boin-nova/: BUILD
vm/: BUILD  engine.cc  engine.hh  opcodes.hh
