module(
    name = "boin-os",
    version = "0.1.0",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "0.0.10")  # currently unused

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
)

bazel_dep(name = "hermetic_cc_toolchain", version = "3.2.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk", "zig_sdk-linux-amd64", "zig_sdk-linux-arm64", "zig_sdk-macos-amd64", "zig_sdk-macos-arm64", "zig_sdk-windows-amd64")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)
