module(
    name = "boin-os",
    version = "0.1.0",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nova-x86_64",
    build_file = "@//nova/x86_64:nova.BUILD",
    integrity = "sha256-JJ0kBSrilLo7hfPNnlVNqYw9zybea3bTYofaano4ORU=",
    strip_prefix = "NOVA-release-25.08.0",
    url = "https://github.com/udosteinberg/NOVA/archive/refs/tags/release-25.08.0.zip",
)
